Corrected DaysToSummer-numbers were not working

--- a/src/components/features/DaysToSummer/DaysToSummer.scss
+++ b/src/components/features/DaysToSummer/DaysToSummer.scss
@@ -5,19 +5,14 @@
     ;
   }
   
-  .title, .days {
-    position: absolute;
-    width: 100%;
-  }
-  
-  .title, .days {
-    bottom: 310px;
-    font-size: 20px;
-  }
-  
-  .days {
+  .title {
     position: relative;
     text-align: center;
     font-size: medium;
   }
 
+  .days {
+    position: relative;
+    text-align: center;
+    font-size: large;
+  }
